fix(sidebar):Resolve overlapping issue on Kids Logo when hovering over Home section (#82)

--- a/src/components/Dashboard/Sidebar/Sidebar.module.css
+++ b/src/components/Dashboard/Sidebar/Sidebar.module.css
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-top: 5px;
 }
 
 .nav {
